# cspilot

./: .env.cspilot  .gitignore  404.html  CHANGELOG.md  CITATION.cff  LICENSE.md  MANIFEST.in  README.md  _zensical.toml  agapi.html  agent_usage.html  cli_usage.html  configuration.html  development.html  examples.html  index.html  installation.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  roadmap.html  safety.html  search.js  search.json  tools.html  updating_docs.html  usage.txt  workflows.html
.github/workflows/: docs.yaml  tests.yaml
agapi/: index.html
agent_usage/: index.html
cli_usage/: index.html
configuration/: index.html
development/: index.html
docs/: agapi.md  agent_usage.md  cli_usage.md  configuration.md  development.md  examples.md  index.md  installation.md  roadmap.md  safety.md  tools.md  updating_docs.md  workflows.md
example_docs/about/: changelog.html  conduct.html  license.html
example_docs/code/: hints.html  source.html  tests.html
example_docs/github/: commits.html  workflows.html
example_docs/installation/: install.html  pyproject.html
example_docs/intro/: resources.html  (+1 more)
examples/: index.html
installation/: index.html
reference/: SUMMARY.html
roadmap/: index.html
safety/: index.html
search/: search_index.json
tests/: requirements.txt  test_agent.py  test_cli.py  test_console_reporting.py  test_llm_openrouter.py  test_mol_result_tools.py  test_nwpesse_tools.py  test_opi_orca_tools.py  test_profiles_materials.py  test_registry_normalization.py  test_repair.py  test_router_graph.py  test_stk_tools.py  test_verifier_executor.py  test_workflows.py
tools/: index.html
updating_docs/: index.html
workflows/: index.html
(+174 files in other folders)
