[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cspilot"
version = "0.1.0"
description = "Command line tools for computational chemistry structure workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.23.0",
    "openai-agents>=0.17.3",
    "orca-pi>=0.1.0",
    "pydantic>=2.8.0",
    "pubchempy>=1.0.4",
    "python-dotenv>=1.0.1",
    "rdkit>=2025.9.6",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "pytest-cov>=5.0.0", "ruff>=0.5.0"]
mace = ["mace-torch>=0.3.0"]
docs = [
    "mkdocstrings-python>=2.0.0",
    "zensical>=0.0.24",
    "pillow>=11.3.0",
    "cairosvg>=2.8.2"
]

[project.scripts]
cspilot = "cspilot.cli:app"
cspiolt = "cspilot.cli:app"

[project.urls]
repository = "https://github.com/sandipgiri576/cspilot"
documentation = "https://sandipgiri576.github.io/cspilot/"
changelog = "https://github.com/sandipgiri576/cspilot/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cspilot = ["py.typed"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-p no:warnings", "--import-mode=importlib"]
xfail_strict = true
log_cli_level = "warn"
pythonpath = "src"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
